--- a/.promu.yml
+++ b/.promu.yml
@@ -1,6 +1,4 @@
 go:
-    # Whenever the Go version is updated here, .circle/config.yml and
-    # .promu-cgo.yml should also be updated.
     version: 1.23
     cgo: false
 repository:
@@ -8,6 +6,7 @@ repository:
 build:
     binaries:
         - name: script_exporter
+    flags: -a -tags script_exporter
     ldflags: |
         -X github.com/prometheus/common/version.Version={{.Version}}
         -X github.com/prometheus/common/version.Revision={{.Revision}}
